[workspace]
members = [
    ".",
    "nflog-sys",
    "nfnetlink-sys"
]

[package]
name = "nflog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitflags = "1.3.2"
libc = "0.2.99"
nflog-sys = { path = "nflog-sys" }
pnet_packet = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net"] }

[[example]]
name = "queue"