[workspace]
members = [
    ".",
    "nflog-sys",
    "nfnetlink-sys"
]

[package]
name = "tokio-nflog"
version = "0.1.0"
edition = "2018"

[features]
serde = ["pnet_base/serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
bytes = "1.1.0"
futures = { version = "0.3", default-features = false }
libc = "0.2.99"
nflog-sys = { path = "nflog-sys" }
nix = "0.22.1"
pnet_base = "0.28.0"
tokio = { version = "1", features = ["net"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "queue"
