[package]
name = "nflog-sys"
version = "0.1.0"
edition = "2018"
build = "build.rs"
links = "netfilter_log"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfnetlink-sys = { path = "../nfnetlink-sys" }
libc = "0.2.99"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"